<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_settings"
        android:icon="@drawable/ic_twotone_app_settings_alt_24"
        android:title="@string/disconnect"
        app:showAsAction="always" />
    <item
        android:id="@+id/mi_disconnect"
        android:title="@string/disconnect" />
    <item
        android:id="@+id/mi_clear_log"
        android:title="@string/clear_log" />
    <item
        android:id="@+id/mi_current_auth_info"
        android:title="@string/current_auth_info" />
    <item
        android:id="@+id/mi_start_evaluating"
        android:title="@string/start_evaluating" />
    <!--<item-->
    <!--android:id="@+id/mi_settings"-->
    <!--android:title="设置" />-->
</menu>