<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/client_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/reset_client_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/custom_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_device_id" />

            <EditText
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request" />
        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

            <TextView
                    android:id="@+id/tv_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:background="#e9e9e9"
                    android:visibility="invisible"/>
        </ScrollView>

        <ImageView
                android:id="@+id/qr_code"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@android:color/white" android:visibility="invisible"/>

        <Button
                android:id="@+id/open_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/open_in_browser" android:visibility="invisible"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>