<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/auth_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/auth"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/evs_connect_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/evs_connect"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/evs_settings_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/evs_video_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="test_video"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/current_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="16dp"
            android:gravity="center_horizontal" />
    </FrameLayout>
</LinearLayout>