<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:elevation="4dp"
            tools:ignore="UnusedAttribute">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:id="@+id/audio_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:tint="?colorAccent" />

                <EditText
                    android:id="@+id/text_in"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/send_text_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/evs_connect_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/connect_to_evs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/token"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="monospace"
                        android:singleLine="true"
                        tools:text="Token:" />

                    <TextView
                        android:id="@+id/ws_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="@string/default_ws_url" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/recording_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60000000"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="144dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/iat_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_vertical"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        tools:text="今天天气怎么样" />
                </LinearLayout>

                <Button
                    android:id="@+id/cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/cancel" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="播放控制" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap">

                <Button
                    android:id="@+id/btn_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="playback_controller.PREVIOUS"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btn_resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="playback_controller.RESUME"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btn_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="playback_controller.PAUSE"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="playback_controller.NEXT"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="playback_controller.EXIT"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="状态同步" />

            <Button
                android:id="@+id/send_state_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="system.state_sync"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/custom_context"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自定义 Context"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_custom_context"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="编辑" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="识别" />

            <RadioGroup
                android:id="@+id/profile_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_close_talk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="近场" />

                <RadioButton
                    android:id="@+id/radio_far_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="远场" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/background_recognize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_recognize" />

            <CheckBox
                android:id="@+id/disable_response_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="禁止响应到达时播放提示音"
                android:textAllCaps="false" />

        </LinearLayout>

        <View
            android:id="@+id/disconnect_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible" />
    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>